@@ -4,13 +4,16 @@ module FeatureFlagger
 
     RELEASED_FEATURES = 'released_features'
 
-    def initialize(storage, notifier)
+    def initialize(storage, notifier, cache_store = nil)
       @storage = storage
       @notifier = notifier
+      @cache_store = cache_store
     end
 
-    def released?(feature_key, resource_id)
-      @storage.has_value?(RELEASED_FEATURES, feature_key) || @storage.has_value?(feature_key, resource_id)
+    def released?(feature_key, resource_id, options = {})
+      cache "released/#{feature_key}", options do
+        @storage.has_value?(RELEASED_FEATURES, feature_key) || @storage.has_value?(feature_key, resource_id)
+      end
     end
 
     def release(feature_key, resource_id)
@@ -22,8 +25,10 @@ module FeatureFlagger
       @storage.add(feature_key, resource_name, resource_id)
     end
 
-    def releases(resource_name, resource_id)
-      @storage.fetch_releases(resource_name, resource_id, RELEASED_FEATURES)
+    def releases(resource_name, resource_id, options = {})
+      cache "releases/#{RELEASED_FEATURES}", options do
+        @storage.fetch_releases(resource_name, resource_id, RELEASED_FEATURES)
+      end
     end
 
     def release_to_all(feature_key)
@@ -44,16 +49,22 @@ module FeatureFlagger
       @storage.remove_all(RELEASED_FEATURES, feature_key)
     end
 
-    def resource_ids(feature_key)
-      @storage.all_values(feature_key)
+    def resource_ids(feature_key, options = {})
+      cache "all_values/#{feature_key}", options do
+        @storage.all_values(feature_key)
+      end
     end
 
-    def released_features_to_all
-      @storage.all_values(RELEASED_FEATURES)
+    def released_features_to_all(options = {})
+      cache "all_values/#{RELEASED_FEATURES}", options do
+        @storage.all_values(RELEASED_FEATURES)
+      end
     end
 
-    def released_to_all?(feature_key)
-      @storage.has_value?(RELEASED_FEATURES, feature_key)
+    def released_to_all?(feature_key, options = {})
+      cache "has_value/#{RELEASED_FEATURES}", options do
+        @storage.has_value?(RELEASED_FEATURES, feature_key)
+      end
     end
 
     # DEPRECATED: this method will be removed from public api on v2.0 version.
@@ -65,5 +76,16 @@ module FeatureFlagger
     def feature_keys
       @storage.feature_keys - [FeatureFlagger::Control::RELEASED_FEATURES]
     end
+
+    def cache(name, options, &block)
+      if @cache_store
+        @cache_store.fetch(name, force: options[:skip_cache]) do
+          block.call
+        end
+      else
+        block.call
+      end
+    end
+
   end
 end
