@@ -13,3 +13,4 @@ end
 
 $LOAD_PATH.unshift File.expand_path('../lib', __dir__)
 require 'feature_flagger'
+require 'active_support'
